--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "stylelint-config-standard-scss": "^5.0.0",
     "typescript": "^4.8.2",
     "vuetify": "^3.0.0-beta.13"
+  },
+  "dependencies": {
+    "aws-amplify": "^4.3.37"
   }
 }
