--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard-scss": "^5.0.0",
+    "the-new-css-reset": "^1.7.3",
     "typescript": "^4.8.2",
     "vuetify": "^3.0.0-beta.13"
   },
