--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.2.0",
-    "nuxt": "3.0.0-rc.11",
+    "nuxt": "3.0.0-rc.12",
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "sass": "^1.54.5",
@@ -35,10 +35,12 @@
     "stylelint-config-standard-scss": "^5.0.0",
     "the-new-css-reset": "^1.7.3",
     "typescript": "^4.8.2",
-    "vuetify": "^3.0.0-beta.13"
+    "vuetify": "3.0.0-beta.14"
   },
   "dependencies": {
     "@aws-amplify/api-graphql": "^2.3.19",
-    "aws-amplify": "^4.3.37"
+    "@aws-amplify/ui-vue": "^2.4.24",
+    "aws-amplify": "^4.3.37",
+    "nuxt-jsoneditor": "^1.6.2"
   }
 }
