--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "stylelint-config-standard-scss": "^5.0.0",
     "the-new-css-reset": "^1.7.3",
     "typescript": "^4.8.2",
-    "vuetify": "3.0.0-beta.14"
+    "vuetify": "3.0.0"
   },
   "dependencies": {
     "@aws-amplify/api-graphql": "^2.3.19",
