[fix] uuidライブラリ追加

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@aws-amplify/api-graphql": "^2.3.19",
     "@aws-amplify/ui-vue": "^2.4.24",
     "aws-amplify": "^4.3.37",
-    "nuxt-jsoneditor": "^1.6.2"
+    "nuxt-jsoneditor": "^1.6.2",
+    "uuid": "^9.0.0"
   }
 }
