--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.2.0",
-    "nuxt": "3.0.0-rc.12",
+    "nuxt": "3.0.0",
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "sass": "^1.54.5",
@@ -35,7 +35,7 @@
     "stylelint-config-standard-scss": "^5.0.0",
     "the-new-css-reset": "^1.7.3",
     "typescript": "^4.8.2",
-    "vuetify": "3.0.0"
+    "vuetify": "3.0.1"
   },
   "dependencies": {
     "@aws-amplify/api-graphql": "^2.3.19",
@@ -44,6 +44,7 @@
     "@tiptap/vue-3": "^2.0.0-beta.202",
     "aws-amplify": "^4.3.37",
     "nuxt-jsoneditor": "^1.6.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "vue3-easy-data-table": "^1.5.15"
   }
 }
