--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.2.0",
-    "nuxt": "3.0.0-rc.4",
+    "nuxt": "3.0.0",
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "sass": "^1.54.5",
@@ -48,7 +48,6 @@
     "@tiptap/starter-kit": "^2.0.0-beta.202",
     "@tiptap/vue-3": "^2.0.0-beta.202",
     "aws-amplify": "^4.3.37",
-    "nuxt-jsoneditor": "^1.6.2",
     "vue3-easy-data-table": "^1.5.15"
   }
 }
