--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdi/font": "^7.0.96",
     "@mdi/js": "^7.0.96",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
+    "@types/node": "^18.11.19",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
@@ -26,7 +27,7 @@
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.2.0",
-    "nuxt": "3.0.0",
+    "nuxt": "^3.1.2",
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "sass": "^1.54.5",
@@ -36,7 +37,8 @@
     "stylelint-config-standard-scss": "^5.0.0",
     "the-new-css-reset": "^1.7.3",
     "typescript": "^4.8.2",
-    "vuetify": "3.0.1"
+    "vite-plugin-vuetify": "^1.0.2",
+    "vuetify": "^3.1.3"
   },
   "dependencies": {
     "@aws-amplify/api-graphql": "^2.3.19",
