--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
   "dependencies": {
     "@aws-amplify/api-graphql": "^2.3.19",
     "@aws-amplify/ui-vue": "^2.4.24",
-    "@tiptap/extension-highlight": "^2.0.0-beta.204",
-    "@tiptap/extension-image": "^2.0.0-beta.204",
-    "@tiptap/extension-text-align": "^2.0.0-beta.204",
-    "@tiptap/extension-typography": "^2.0.0-beta.204",
-    "@tiptap/starter-kit": "^2.0.0-beta.202",
-    "@tiptap/vue-3": "^2.0.0-beta.202",
+    "@tiptap/extension-highlight": "^2.0.0-beta.217",
+    "@tiptap/extension-image": "^2.0.0-beta.217",
+    "@tiptap/extension-text-align": "^2.0.0-beta.217",
+    "@tiptap/extension-typography": "^2.0.0-beta.217",
+    "@tiptap/pm": "^2.0.0-beta.217",
+    "@tiptap/starter-kit": "^2.0.0-beta.217",
+    "@tiptap/vue-3": "^2.0.0-beta.217",
     "aws-amplify": "^4.3.37",
     "vue3-easy-data-table": "^1.5.15"
   }
