--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@tiptap/starter-kit": "^2.0.0-beta.217",
     "@tiptap/vue-3": "^2.0.0-beta.217",
     "aws-amplify": "^4.3.37",
+    "v-calendar": "^3.0.0-alpha.8",
     "vue3-easy-data-table": "^1.5.15"
   }
 }
