--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@tiptap/pm": "^2.0.0-beta.217",
     "@tiptap/starter-kit": "^2.0.0-beta.217",
     "@tiptap/vue-3": "^2.0.0-beta.217",
-    "aws-amplify": "^4.3.37",
-    "vue3-easy-data-table": "^1.5.15"
+    "aws-amplify": "^4.3.37"
   }
 }
