[chore]  upgrade library

--- a/package.json
+++ b/package.json
@@ -16,40 +16,46 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix && yarn lint:style --fix"
   },
   "devDependencies": {
-    "@mdi/font": "^7.0.96",
-    "@mdi/js": "^7.0.96",
-    "@nuxtjs/eslint-config-typescript": "^10.0.0",
-    "@types/node": "^18.11.19",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-nuxt": "^3.2.0",
+    "@mdi/font": "npm:@mdi/font@latest",
+    "@mdi/js": "npm:@mdi/js@latest",
+    "@nuxtjs/eslint-config-typescript": "npm:@nuxtjs/eslint-config-typescript@latest",
+    "@types/node": "npm:@types/node@latest",
+    "@types/uuid": "npm:@types/uuid@latest",
+    "@typescript-eslint/eslint-plugin": "npm:@typescript-eslint/eslint-plugin@latest",
+    "@typescript-eslint/parser": "npm:@typescript-eslint/parser@latest",
+    "cross-env": "npm:cross-env@latest",
+    "eslint": "npm:eslint@latest",
+    "eslint-config-prettier": "npm:eslint-config-prettier@latest",
     "nuxt": "^3.2.0",
-    "postcss-html": "^1.5.0",
-    "prettier": "^2.7.1",
-    "sass": "^1.54.5",
-    "stylelint": "^14.11.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recess-order": "^3.0.0",
-    "stylelint-config-standard-scss": "^5.0.0",
-    "the-new-css-reset": "^1.7.3",
-    "typescript": "^4.8.2",
-    "vite-plugin-vuetify": "^1.0.2",
+    "postcss-html": "npm:postcss-html@latest",
+    "prettier": "npm:prettier@latest",
+    "sass": "npm:sass@latest",
+    "stylelint": "npm:stylelint@latest",
+    "stylelint-config-prettier": "npm:stylelint-config-prettier@latest",
+    "stylelint-config-recess-order": "npm:stylelint-config-recess-order@latest",
+    "stylelint-config-standard-scss": "npm:stylelint-config-standard-scss@latest",
+    "the-new-css-reset": "npm:the-new-css-reset@latest",
+    "typescript": "npm:typescript@latest",
+    "vite-plugin-vuetify": "npm:vite-plugin-vuetify@latest",
     "vuetify": "^3.1.4"
   },
   "dependencies": {
-    "@aws-amplify/api-graphql": "^2.3.19",
-    "@aws-amplify/ui-vue": "^2.4.24",
-    "@tiptap/extension-highlight": "^2.0.0-beta.217",
-    "@tiptap/extension-image": "^2.0.0-beta.217",
-    "@tiptap/extension-text-align": "^2.0.0-beta.217",
-    "@tiptap/extension-typography": "^2.0.0-beta.217",
-    "@tiptap/pm": "^2.0.0-beta.217",
-    "@tiptap/starter-kit": "^2.0.0-beta.217",
-    "@tiptap/vue-3": "^2.0.0-beta.217",
-    "aws-amplify": "^4.3.37"
+    "@aws-amplify/api-graphql": "npm:@aws-amplify/api-graphql@latest",
+    "@aws-amplify/ui-vue": "npm:@aws-amplify/ui-vue@latest",
+    "@tiptap/extension-highlight": "npm:@tiptap/extension-highlight@latest",
+    "@tiptap/extension-image": "npm:@tiptap/extension-image@latest",
+    "@tiptap/extension-text-align": "npm:@tiptap/extension-text-align@latest",
+    "@tiptap/extension-typography": "npm:@tiptap/extension-typography@latest",
+    "@tiptap/pm": "npm:@tiptap/pm@latest",
+    "@tiptap/starter-kit": "npm:@tiptap/starter-kit@latest",
+    "@tiptap/vue-3": "npm:@tiptap/vue-3@latest",
+    "aws-amplify": "npm:aws-amplify@latest"
+  },
+  "resolutions": {
+    "vue": "npm:vue@latest",
+    "vite": "npm:vite@latest",
+    "@tiptap/core": "npm:@tiptap/core@latest",
+    "postcss": "npm:postcss@latest",
+    "uuid": "npm:uuid@latest"
   }
 }
